--- a/Naf-Naf-CESDE/Naf-Naf-CESDE/index.html
+++ b/Naf-Naf-CESDE/Naf-Naf-CESDE/index.html
@@ -49,7 +49,7 @@
 
     <main>
         <section class="product-carousel">
-            <button class="carousel-arrow prev"><i class="fas fa-chevron-left"></i></button>
+            <button id="btnAtras" class="carousel-arrow prev"><i class="fas fa-chevron-left"></i></button>
             <div class="product-grid">
 
                 <div class="product-card">
@@ -89,7 +89,7 @@
                 </div>
 
             </div>
-            <button class="carousel-arrow next"><i class="fas fa-chevron-right"></i></button>
+            <button id="btnAdelante" class="carousel-arrow next"><i class="fas fa-chevron-right"></i></button>
         </section>
     </main>
 
