Se necesita modificar el segundo carrusel

--- a/Naf-Naf-CESDE/Naf-Naf-CESDE/index.html
+++ b/Naf-Naf-CESDE/Naf-Naf-CESDE/index.html
@@ -49,7 +49,7 @@
 
     <main>
         <section class="product-carousel">
-            <button id="btnAtras" class="carousel-arrow prev"><i class="fas fa-chevron-left"></i></button>
+            <button class="carousel-arrow prev btnAtras"><i class="fas fa-chevron-left"></i></button>
             <div class="product-grid">
 
                 <div class="product-card">
@@ -89,7 +89,51 @@
                 </div>
 
             </div>
-            <button id="btnAdelante" class="carousel-arrow next"><i class="fas fa-chevron-right"></i></button>
+            <button  class="carousel-arrow next btnAdelante"><i class="fas fa-chevron-right"></i></button>
+        </section>
+
+        <section class="product-carousel">
+            <button class="carousel-arrow prev btnAtras"><i class="fas fa-chevron-left"></i></button>
+            <div class="product-grid">
+
+                <div class="product-card">
+                    <img src="assets/media/images/producto1.png" alt="Enterizo con escote en V">
+                    <p>Enterizo con escote en V</p>
+                    <div class="price">
+                        <span class="original-price">$ 359.900</span>
+                        <span class="discount-price">$ 251.930</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <img src="assets/media/images/producto2.png" alt="Pantalón Palazzo de tiro súper alto">
+                    <p>Pantalón Palazzo de tiro súper alto</p>
+                    <div class="price">
+                        <span class="original-price">$ 239.900</span>
+                        <span class="discount-price">$ 167.930</span>
+                    </div>  
+                </div>
+
+                <div class="product-card">
+                    <img src="assets/media/images/producto3.png" alt="Camiseta manga sisa con tela acanalada">
+                    <p>Camiseta manga sisa con tela acanalada</p>
+                    <div class="price">
+                        <span class="original-price">$ 99.900</span>
+                        <span class="discount-price">$ 69.930</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <img src="assets/media/images/producto4.png" alt="Pantalón Relax tiro alto">
+                    <p>Pantalón Relax tiro alto</p>
+                    <div class="price">
+                        <span class="original-price">$ 279.900</span>
+                        <span class="discount-price">$ 195.930</span>
+                    </div>
+                </div>
+
+            </div>
+            <button class="carousel-arrow next btnAdelante"><i class="fas fa-chevron-right"></i></button>
         </section>
     </main>
 
