Seguir con carrusel y funcionalidad de la página

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAF-NAF</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="/Naf-Naf-CESDE/assets/css/Media-Querys.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/Media-Querys.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
@@ -24,9 +24,9 @@
                     <button id="menu-toggle" class="icon-buttonn letrasNavbar"><i class="fas fa-bars"></i></button>
             </nav>
             <div class="header-right">
-                <button id="letrasNavbar" class="icon-button letrasNavbar"><i class="fas fa-search"></i></button>
-                <button id="letrasNavbar" class="icon-button letrasNavbar"><i class="fas fa-user"></i></button>
-                <button id="cart-toggle" class="icon-button letrasNavbar"><i class="fas fa-shopping-cart"></i></button>
+                <button id="letrasNavbar" class="icon-button letrasNavbar"><i class="fas fa-search iconos"></i></button>
+                <button id="letrasNavbar" class="icon-button letrasNavbar"><i class="fas fa-user iconos"></i></button>
+                <button id="cart-toggle" class="icon-button letrasNavbar"><i class="fas fa-shopping-cart iconos"></i></button>
             </div>
         </div>
     </header>
@@ -43,7 +43,7 @@
 
     <section class="carrusel-2">
         <div style="position: relative;">
-            <img class="imagen-fondo" src="/Naf-Naf-CESDE/assets/media/images/ifondo.jpg" alt="Imagen principal">
+            <img class="imagen-fondo" src="/assets/media/images/ifondo.jpg" alt="Imagen principal">
         </div>
     </section>
 
