--- a/formulario.html
+++ b/formulario.html
@@ -1,22 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Formulario de Registro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body { font-family: Arial, sans-serif; background: #f4f4f4; }
-        .container { max-width: 400px; margin: 40px auto; background: #fff; padding: 24px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);}
-        h2 { text-align: center; margin-bottom: 24px; }
-        label { display: block; margin-bottom: 6px; }
-        input, select { width: 100%; padding: 8px; margin-bottom: 16px; border: 1px solid #ccc; border-radius: 4px; }
-        button { width: 100%; padding: 10px; background: black; color: #fff; border: none; border-radius: 4px; font-size: 16px; cursor: pointer;}
-        button:hover { background: #0056b3; }
+        body.formulario {
+            font-family: Arial, sans-serif;
+            background-image: url(/assets/media/images/fondo\ formulario.webp);
+            background-size: cover;
+            background-position: absolute;
+            background-repeat: no-repeat;
+            height: 100vh;
+
+        }
+
+        .container-formulario {
+            max-width: 400px;
+            margin: 40px auto;
+            background: #fff;
+            padding: 24px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        h2.titulo-formulario {
+            text-align: center;
+            margin-bottom: 24px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 6px;
+        }
+
+        input,
+        select {
+            width: 96%;
+            padding: 8px;
+            margin-bottom: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background: black;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: #0056b3;
+        }
+
+        .checkbox-label {
+            white-space: nowrap;
+            display: flex;
+            align-items: start;
+            /* Centra verticalmente checkbox y texto */
+            gap: 2px;
+            /* Espacio entre checkbox y texto */
+            justify-content: flex-start;
+        }
+
+        .checkbox-input {
+            margin: 0;
+            /* Quita márgenes extra del checkbox */
+        }
     </style>
 </head>
-<body>
-    <div class="container">
-        <h2>Registro de Usuario</h2>
+
+<body class="formulario">
+    <div class="container-formulario">
+        <h2 class="titulo-formulario">Registro de Usuario</h2>
         <form action="#" method="post">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" required>
@@ -48,14 +110,16 @@
                 <option value="masculino">Masculino</option>
                 <option value="otro">Otro</option>
             </select>
-
-            <label>
-                <input type="checkbox" name="terminos" required>
-                Acepto los términos y condiciones
-            </label>
+            <div class="checkbox-container">
+                <label class="checkbox-label">
+                    <input class="checkbox-input" type="checkbox" name="terminos" required> Acepto los términos y
+                    condiciones
+                </label>
+            </div>
 
             <button type="submit">Registrarse</button>
         </form>
     </div>
 </body>
+
 </html>
