--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAF-NAF</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="/Naf-Naf-CESDE/assets/css/Media-Querys.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/Media-Querys.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
@@ -24,8 +24,9 @@
                     <button id="menu-toggle" class="icon-buttonn letrasNavbar"><i class="fas fa-bars"></i></button>
             </nav>
             <div class="header-right">
-                <button id="letrasNavbar" class="icon-button letrasNavbar"><i class="fas fa-search"></i></button>
-                <button id="letrasNavbar" class="icon-button letrasNavbar"><i class="fas fa-user"></i></button>
+                <button class="icon-button letrasNavbar buscar"><i class="fas fa-search"></i></button>
+                <input type="text" id="campo-buscar" placeholder="Buscar..." style="display: none;">
+                <a href="/formulario.html" target="_blank" class="icon-button letrasNavbar"><i class="fas fa-user"></i></a>
                 <button id="cart-toggle" class="icon-button letrasNavbar"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
@@ -43,7 +44,7 @@
 
     <section class="carrusel-2">
         <div style="position: relative;">
-            <img class="imagen-fondo" src="/Naf-Naf-CESDE/assets/media/images/ifondo.jpg" alt="Imagen principal">
+            <img class="imagen-fondo" src="/assets/media/images/ifondo.jpg" alt="Imagen principal">
         </div>
     </section>
 
@@ -85,6 +86,15 @@
                     <div class="price">
                         <span class="original-price">$ 279.900</span>
                         <span class="discount-price">$ 195.930</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <img src="assets/media/images/producto1.png" alt="Enterizo con escote en V">
+                    <p>Enterizo con escote en V</p>
+                    <div class="price">
+                        <span class="original-price">$ 359.900</span>
+                        <span class="discount-price">$ 251.930</span>
                     </div>
                 </div>
 
