Avances en producto.html, scripts y estilos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             <button class="carousel-arrow prev btnAtras"><i class="fas fa-chevron-left"></i></button>
             <div class="product-grid">
 
-                <div class="product-card">
+                 <!-- MODIFICANDO PARA PRUEBAS DC -->
+                <div class="product-card" onclick="window.location.href='producto.html?id=1'">
                     <img src="assets/media/images/producto1.webp" alt="Enterizo con escote en V">
                     <p>Camiseta manga corta tradicional</p>
                     <div class="price">
