--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <p style="font-size: 3.1rem; color: white; text-align: center;">PRONTO EN DESARROLLO</p>
         </div>
     </div>
-    <button class="btn-primary">Ver Carrito</button>
+    <button id="verCarrito" class="btn-primary">Ver Carrito</button>
     
     <div id="overlay" class="overlay"></div>
 
