Se crea el incio de sesion, se le da funcionalidad a los botones de formulario e inicio de sesion

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="header-right">
                 <button class="icon-button letrasNavbar buscar"><i class="fas fa-search"></i></button>
                 <input type="text" id="campo-buscar" placeholder="Buscar..." style="display: none;">
-                <a href="/formulario.html" target="_blank" class="icon-button letrasNavbar"><i
+                <a href="/inicioSesion.html" target="_blank" class="icon-button letrasNavbar"><i
                         class="fas fa-user"></i></a>
                 <button id="cart-toggle" class="icon-button letrasNavbar"><i class="fas fa-shopping-cart"></i></button>
             </div>
