--- a/formulario.html
+++ b/formulario.html
@@ -13,16 +13,24 @@
             background-position: absolute;
             background-repeat: no-repeat;
             height: 100vh;
-
         }
 
         .container-formulario {
+            opacity: 0.87;
             max-width: 400px;
             margin: 40px auto;
             background: #fff;
             padding: 24px;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .container-formulario:focus-within {
+            opacity: 1;
+        }
+
+        .container-formulario:hover {
+            opacity: 1;
         }
 
         h2.titulo-formulario {
@@ -56,7 +64,7 @@
         }
 
         button:hover {
-            background: #0056b3;
+            background: #51904b;
         }
 
         .checkbox-label {
@@ -79,7 +87,7 @@
 <body class="formulario">
     <div class="container-formulario">
         <h2 class="titulo-formulario">Registro de Usuario</h2>
-        <form action="#" method="post">
+        <form class="formRegistro" method="post">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" required>
 
@@ -120,6 +128,8 @@
             <button type="submit">Registrarse</button>
         </form>
     </div>
+    <script src="/assets/js/funcionesInicioSesion.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
