Pequeños cambios en el arbol de directorios y redireccionamientos de paginas inicio sesion y formulario

--- a/html/inicioSesion.html
+++ b/html/inicioSesion.html
@@ -95,7 +95,7 @@
             </div>
             <button type="submit" class="login-btn">Entrar</button>
         </form>
-        <a href="formulario.html" target="_blank" class="register-link">¿No tienes cuenta? Regístrate</a>
+        <a href="/html/formulario.html" target="_blank" class="register-link">¿No tienes cuenta? Regístrate</a>
     </div>
     <script src="/assets/js/funcionesInicioSesion.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
