Fix. Se crean los catalogos en nuevo,ropa y basicos. Se ajustas línea de precios

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <h1 class="letrasNavbar">NAF NAF</h1>
             </a>
             <nav id="main-nav" class="main-nav">
-                <a class="letrasNavbar" href="#">Nuevo</a>
-                <a class="letrasNavbar" href="#">Ropa</a>
-                <a class="letrasNavbar" href="#">Básicos</a>
+                <a class="letrasNavbar" href="html/nuevo.html">Nuevo</a>
+                <a class="letrasNavbar" href="html/ropa.html">Ropa</a>
+                <a class="letrasNavbar" href="html/basicos.html">Básicos</a>
                 <a href="#" class="nav-discount letrasNavbar">Descuentos</a>
                 <button id="menu-toggle" class="icon-button2 letrasNavbar"><i class="fas fa-bars"></i></button>
             </nav>
@@ -64,7 +64,7 @@
                  <!-- MODIFICANDO PARA PRUEBAS DC -->
                 <div class="product-card" onclick="window.location.href='producto.html?id=1'">
                     <img src="assets/media/images/producto1.webp" alt="Enterizo con escote en V">
-                    <p>Camiseta manga corta tradicional</p>
+                    <p>Camiseta manga corta</p>
                     <div class="price">
                         <span class="original-price">$ 149.900</span>
                         <!-- <span class="discount-price">$ 251.930</span> -->
@@ -91,7 +91,7 @@
 
                 <div class="product-card">
                     <img src="assets/media/images/producto4.webp" alt="Pantalón Relax tiro alto">
-                    <p>Camisa manga corta con apliques bordados</p>
+                    <p>Camisa manga corta con bordados</p>
                     <div class="price">
                         <span class="original-price">$ 179.900</span>
                         <!-- <span class="discount-price">$ 195.930</span> -->
@@ -109,7 +109,7 @@
 
                 <div class="product-card">
                     <img src="assets/media/images/producto6.webp" alt="Enterizo con escote en V">
-                    <p>Vestido largo para eventos casuales</p>
+                    <p>Vestido largo casual</p>
                     <div class="price">
                         <span class="original-price">$ 299.900</span>
                         <!-- <span class="discount-price">$ 251.930</span> -->
@@ -175,7 +175,7 @@
         <div>
             <h1
                 style="text-align: center; font-size: 2.3rem; color: gray; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-                MAS VENDIDOS
+                MÁS VENDIDOS
             </h1>
         </div>
         <section class="product-carousel">
@@ -184,7 +184,7 @@
 
                 <div class="product-card">
                     <img src="assets/media/images/masVendido1.webp" alt="Enterizo con escote en V">
-                    <p>Pantalón Palazzo de tiro súper alto</p>
+                    <p>Pantalón Palazzo de tiro alto</p>
                     <div class="price">
                         <span class="original-price">$ 239.900</span>
                         <!-- <span class="discount-price">$ 251.930</span> -->
@@ -211,7 +211,7 @@
 
                 <div class="product-card">
                     <img src="assets/media/images/masVendido4.webp" alt="Pantalón Relax tiro alto">
-                    <p>Camiseta manga sisa con tela acanalada</p>
+                    <p>Camiseta sisa de tela acanalada</p>
                     <div class="price">
                         <span class="original-price">$ 99.900</span>
                         <!-- <span class="discount-price">$ 195.930</span> -->
@@ -220,7 +220,7 @@
 
                 <div class="product-card">
                     <img src="assets/media/images/masVendido5.webp" alt="Pantalón Relax tiro alto">
-                    <p>Camiseta manga corta con lentejuelas en frente</p>
+                    <p>Camiseta con lentejuelas</p>
                     <div class="price">
                         <span class="original-price">$ 179.900</span>
                         <!-- <span class="discount-price">$ 195.930</span> -->
@@ -252,7 +252,7 @@
                 </div>
                 <div class="product-card">
                     <img src="assets/media/images/masVendido9.webp" alt="Pantalón Relax tiro alto">
-                    <p>Camisaeta manga sisa de largo pretinero</p>
+                    <p>Camiseta de pretinero</p>
                     <div class="price">
                         <span class="original-price">$ 149.900</span>
                         <!-- <span class="discount-price">$ 195.930</span> -->
