--- a/producto.html
+++ b/producto.html
@@ -19,10 +19,10 @@
                 <h1 class="letrasNavbar">NAF NAF</h1>
             </a>
             <nav id="main-nav" class="main-nav">
-                <a class="letrasNavbar" href="#">Nuevo</a>
-                <a class="letrasNavbar" href="#">Ropa</a>
-                <a class="letrasNavbar" href="#">Básicos</a>
-                <a href="#" class="nav-discount letrasNavbar">Descuentos</a>
+                <a class="letrasNavbar" href="/html/nuevo.html">Nuevo</a>
+                <a class="letrasNavbar" href="/html/ropa.html">Ropa</a>
+                <a class="letrasNavbar" href="/html/basicos.html">Básicos</a>
+                <a href="/index.html" class="nav-discount letrasNavbar">Descuentos</a>
                 <button id="menu-toggle" class="icon-button2 letrasNavbar"><i class="fas fa-bars"></i></button>
             </nav>
             <div class="header-right">
