Se modifica la navbar en el resto de paginas para que este estatica y de un solo color, falta hacer funcional lupa de busqueda en producto.html

--- a/html/basicos.html
+++ b/html/basicos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="icon" href="https://www.google.com/s2/favicons?domain=nafnaf.com.co&sz=64">
 </head>
+
 <body>
 
     <header>
@@ -34,104 +36,116 @@
     </header>
 
     <main>
-            <h1
-                style="text-align: center; font-size: 2.3rem; color: gray; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding: 10px;">
-                LAS BÁSICAS NUNCA PASAN DE MODA
-            </h1>
-    <section class="product-grid">
-        <div class="product-card">
+        <h1
+            style="text-align: center; font-size: 2.3rem; color: gray; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding: 10px;">
+            LAS BÁSICAS NUNCA PASAN DE MODA
+        </h1>
+        <section class="product-grid">
+            <div class="product-card">
                 <img src="/assets/media/images/basicas/basica1.webp" alt="Producto nuevo 1">
                 <p>Camiseta manga corta básica</p>
                 <div class="price">
                     <span class="original-price">$ 109.900</span>
                 </div>
-        </div>
-        <div class="product-card">
+            </div>
+            <div class="product-card">
                 <img src="/assets/media/images/basicas/basica2.webp" alt="Producto nuevo 2">
                 <p>Camiseta básica tradicional</p>
                 <div class="price">
                     <span class="original-price">$ 109.900</span>
                 </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica3.webp" alt="Camiseta manga sisa con tela acanalada">
-                    <p>Camisa básica manga larga</p>
-                    <div class="price">
-                        <span class="original-price">$ 159.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica4.webp" alt="Pantalón Relax tiro alto">
-                    <p>Camisa tradicional básica</p>
-                    <div class="price">
-                        <span class="original-price">$ 159.900</span>
-                    </div>
-        </div>      
-    </section>
-    
-    <section class="product-grid">
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica5.webp" alt="Enterizo con escote en V">
-                    <p>Pantalón básico bota recta</p>
-                    <div class="price">
-                        <span class="original-price">$ 189.900</span>
-                    </div>
-        </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica3.webp" alt="Camiseta manga sisa con tela acanalada">
+                <p>Camisa básica manga larga</p>
+                <div class="price">
+                    <span class="original-price">$ 159.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica4.webp" alt="Pantalón Relax tiro alto">
+                <p>Camisa tradicional básica</p>
+                <div class="price">
+                    <span class="original-price">$ 159.900</span>
+                </div>
+            </div>
+        </section>
 
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica6.webp" alt="Enterizo con escote en V">
-                    <p>Camiseta básica manga sisa</p>
-                    <div class="price">
-                        <span class="original-price">$ 99.900</span>
-                    </div>
-        </div>
+        <section class="product-grid">
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica5.webp" alt="Enterizo con escote en V">
+                <p>Pantalón básico bota recta</p>
+                <div class="price">
+                    <span class="original-price">$ 189.900</span>
+                </div>
+            </div>
 
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica7.webp" alt="Enterizo con escote en V">
-                    <p>Camiseta básica ajustada</p>
-                    <div class="price">
-                        <span class="original-price">$ 99.900</span>
-                    </div>
-        </div>
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica6.webp" alt="Enterizo con escote en V">
+                <p>Camiseta básica manga sisa</p>
+                <div class="price">
+                    <span class="original-price">$ 99.900</span>
+                </div>
+            </div>
 
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica8.webp" alt="Enterizo con escote en V">
-                    <p>Camisa de tiras básica</p>
-                    <div class="price">
-                        <span class="original-price">$ 119.900</span>
-                    </div>
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica7.webp" alt="Enterizo con escote en V">
+                <p>Camiseta básica ajustada</p>
+                <div class="price">
+                    <span class="original-price">$ 99.900</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica8.webp" alt="Enterizo con escote en V">
+                <p>Camisa de tiras básica</p>
+                <div class="price">
+                    <span class="original-price">$ 119.900</span>
+                </div>
+            </div>
+        </section>
+        <section class="product-grid">
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica9.webp" alt="Enterizo con escote en V">
+                <p>Pantalón básico straight fit</p>
+                <div class="price">
+                    <span class="original-price">$ 209.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica10.webp" alt="Enterizo con escote en V">
+                <p>Jean básico tiro alto</p>
+                <div class="price">
+                    <span class="original-price">$ 199.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica11.webp" alt="Enterizo con escote en V">
+                <p>Jean básico skinny</p>
+                <div class="price">
+                    <span class="original-price">$ 199.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/basicas/basica12.webp" alt="Enterizo con escote en V">
+                <p>Pantalón básico ajustable</p>
+                <div class="price">
+                    <span class="original-price">$ 219.900</span>
+                </div>
+            </div>
+        </section>
+        <div id="cart-menu" class="side-cart">
+            <div class="cart-header">
+                <h2>MI BOLSA</h2>
+                <button id="close-cart" class="close-btn">×</button>
+            </div>
+            <div class="cart-content">
+                <p style="font-size: 3.1rem; color: white; text-align: center;">PRONTO EN DESARROLLO</p>
+            </div>
         </div>
-    </section>
-    <section class="product-grid">
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica9.webp" alt="Enterizo con escote en V">
-                    <p>Pantalón básico straight fit</p>
-                    <div class="price">
-                        <span class="original-price">$ 209.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica10.webp" alt="Enterizo con escote en V">
-                    <p>Jean básico tiro alto</p>
-                    <div class="price">
-                        <span class="original-price">$ 199.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica11.webp" alt="Enterizo con escote en V">
-                    <p>Jean básico skinny</p>
-                    <div class="price">
-                        <span class="original-price">$ 199.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/basicas/basica12.webp" alt="Enterizo con escote en V">
-                    <p>Pantalón básico ajustable</p>
-                    <div class="price">
-                        <span class="original-price">$ 219.900</span>
-                    </div>
-        </div>
-    </section>
+        <button id="verCarrito" class="btn-primary">Ver Carrito</button>
+
+        <div id="overlay" class="overlay"></div>
     </main>
 
     <footer>
@@ -160,4 +174,5 @@
 
     <script src="/assets/js/main.js"></script>
 </body>
+
 </html>
