--- a/html/nuevo.html
+++ b/html/nuevo.html
@@ -132,6 +132,18 @@
                     </div>
         </div>
     </section>
+    <div id="cart-menu" class="side-cart">
+            <div class="cart-header">
+                <h2>MI BOLSA</h2>
+                <button id="close-cart" class="close-btn">×</button>
+            </div>
+            <div class="cart-content">
+                <p style="font-size: 3.1rem; color: white; text-align: center;">PRONTO EN DESARROLLO</p>
+            </div>
+        </div>
+        <button id="verCarrito" class="btn-primary">Ver Carrito</button>
+
+        <div id="overlay" class="overlay"></div>
     </main>
 
     <footer>
