--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="https://www.google.com/s2/favicons?domain=nafnaf.com.co&sz=64">
 </head>
 
-<body>
+<body id="inicio">
     <header>
         <div id="header-container" class="header-container">
             <a href="/index.html" class="header-left">
@@ -61,7 +61,7 @@
             <button class="carousel-arrow prev btnAtras"><i class="fas fa-chevron-left"></i></button>
             <div class="product-grid">
 
-                 <!-- MODIFICANDO PARA PRUEBAS DC -->
+                <!-- MODIFICANDO PARA PRUEBAS DC -->
                 <div class="product-card" onclick="window.location.href='producto.html?id=1'">
                     <img src="assets/media/images/producto1.webp" alt="Enterizo con escote en V">
                     <p>Camiseta manga corta</p>
@@ -298,7 +298,7 @@
         </div>
     </div>
     <button id="verCarrito" class="btn-primary">Ver Carrito</button>
-    
+
     <div id="overlay" class="overlay"></div>
 
     <footer>
