--- a/html/ropa.html
+++ b/html/ropa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="icon" href="https://www.google.com/s2/favicons?domain=nafnaf.com.co&sz=64">
 </head>
+
 <body>
 
     <header>
@@ -34,104 +36,117 @@
     </header>
 
     <main>
-             <h1
-                style="text-align: center; font-size: 2.3rem; color: gray; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding: 10px;">
-                JEANS, CHAQUETAS, FALDAS Y MÁS
-            </h1>
-      <section class="product-grid">
-        <div class="product-card">
+        <h1
+            style="text-align: center; font-size: 2.3rem; color: gray; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding: 10px;">
+            JEANS, CHAQUETAS, FALDAS Y MÁS
+        </h1>
+        <section class="product-grid">
+            <div class="product-card">
                 <img src="/assets/media/images/ropa/ropa1.webp" alt="Producto nuevo 1">
                 <p>Camiseta de tiras tipo crop </p>
                 <div class="price">
                     <span class="original-price">$ 149.900</span>
                 </div>
-        </div>
-        <div class="product-card">
+            </div>
+            <div class="product-card">
                 <img src="/assets/media/images/ropa/ropa2.webp" alt="Producto nuevo 2">
                 <p>Camiseta 3/4 con botones</p>
                 <div class="price">
                     <span class="original-price">$ 179.900</span>
                 </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa3.webp" alt="Camiseta manga sisa con tela acanalada">
-                    <p>Camisa manga sisa tejida</p>
-                    <div class="price">
-                        <span class="original-price">$ 149.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa4.webp" alt="Pantalón Relax tiro alto">
-                    <p>Pantalón palazzo tiro alto</p>
-                    <div class="price">
-                        <span class="original-price">$ 269.900</span>
-                    </div>
-        </div>      
-    </section>
-    
-    <section class="product-grid">
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa5.webp" alt="Enterizo con escote en V">
-                    <p>Camisa tejida</p>
-                    <div class="price">
-                        <span class="original-price">$ 169.900</span>
-                    </div>
-        </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa3.webp" alt="Camiseta manga sisa con tela acanalada">
+                <p>Camisa manga sisa tejida</p>
+                <div class="price">
+                    <span class="original-price">$ 149.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa4.webp" alt="Pantalón Relax tiro alto">
+                <p>Pantalón palazzo tiro alto</p>
+                <div class="price">
+                    <span class="original-price">$ 269.900</span>
+                </div>
+            </div>
+        </section>
 
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa6.webp" alt="Enterizo con escote en V">
-                    <p>Chaqueta tipo blazer</p>
-                    <div class="price">
-                        <span class="original-price">$ 459.900</span>
-                    </div>
-        </div>
+        <section class="product-grid">
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa5.webp" alt="Enterizo con escote en V">
+                <p>Camisa tejida</p>
+                <div class="price">
+                    <span class="original-price">$ 169.900</span>
+                </div>
+            </div>
 
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa7.webp" alt="Enterizo con escote en V">
-                    <p>Bermuda con elástico</p>
-                    <div class="price">
-                        <span class="original-price">$ 179.900</span>
-                    </div>
-        </div>
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa6.webp" alt="Enterizo con escote en V">
+                <p>Chaqueta tipo blazer</p>
+                <div class="price">
+                    <span class="original-price">$ 459.900</span>
+                </div>
+            </div>
 
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa8.webp" alt="Enterizo con escote en V">
-                    <p>Camisa sisa con detalles</p>
-                    <div class="price">
-                        <span class="original-price">$ 99.900</span>
-                    </div>
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa7.webp" alt="Enterizo con escote en V">
+                <p>Bermuda con elástico</p>
+                <div class="price">
+                    <span class="original-price">$ 179.900</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa8.webp" alt="Enterizo con escote en V">
+                <p>Camisa sisa con detalles</p>
+                <div class="price">
+                    <span class="original-price">$ 99.900</span>
+                </div>
+            </div>
+        </section>
+        <section class="product-grid">
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa9.webp" alt="Enterizo con escote en V">
+                <p>Buzo tejido</p>
+                <div class="price">
+                    <span class="original-price">$ 269.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa10.webp" alt="Enterizo con escote en V">
+                <p>Camisa de tiras estampada</p>
+                <div class="price">
+                    <span class="original-price">$ 149.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa11.webp" alt="Enterizo con escote en V">
+                <p>Camisa manga larga</p>
+                <div class="price">
+                    <span class="original-price">$ 159.900</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="/assets/media/images/ropa/ropa12.webp" alt="Enterizo con escote en V">
+                <p>Chaqueta tipo blazer</p>
+                <div class="price">
+                    <span class="original-price">$ 459.900</span>
+                </div>
+            </div>
+        </section>
+        <div id="cart-menu" class="side-cart">
+            <div class="cart-header">
+                <h2>MI BOLSA</h2>
+                <button id="close-cart" class="close-btn">×</button>
+            </div>
+            <div class="cart-content">
+                <p style="font-size: 3.1rem; color: white; text-align: center;">PRONTO EN DESARROLLO</p>
+            </div>
         </div>
-    </section>
-    <section class="product-grid">
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa9.webp" alt="Enterizo con escote en V">
-                    <p>Buzo tejido</p>
-                    <div class="price">
-                        <span class="original-price">$ 269.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa10.webp" alt="Enterizo con escote en V">
-                    <p>Camisa de tiras estampada</p>
-                    <div class="price">
-                        <span class="original-price">$ 149.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa11.webp" alt="Enterizo con escote en V">
-                    <p>Camisa manga larga</p>
-                    <div class="price">
-                        <span class="original-price">$ 159.900</span>
-                    </div>
-        </div>
-        <div class="product-card">
-                    <img src="/assets/media/images/ropa/ropa12.webp" alt="Enterizo con escote en V">
-                    <p>Chaqueta tipo blazer</p>
-                    <div class="price">
-                        <span class="original-price">$ 459.900</span>
-                    </div>
-        </div>
-    </section>
+        <button id="verCarrito" class="btn-primary">Ver Carrito</button>
+
+        <div id="overlay" class="overlay"></div>
+
     </main>
 
     <footer>
@@ -160,4 +175,5 @@
 
     <script src="/assets/js/main.js"></script>
 </body>
+
 </html>
