--- a/producto.html
+++ b/producto.html
@@ -28,7 +28,7 @@
             <div class="header-right">
                 <button class="icon-button letrasNavbar buscar"><i class="fas fa-search"></i></button>
                 <input type="text" id="campo-buscar" placeholder="Buscar..." style="display: none;">
-                <a href="/formulario.html" target="_blank" class="icon-button letrasNavbar"><i
+                <a href="/html/inicioSesion.html" target="_blank" class="icon-button letrasNavbar"><i
                         class="fas fa-user"></i></a>
                 <button id="cart-toggle" class="icon-button letrasNavbar"><i class="fas fa-shopping-cart"></i></button>
             </div>
@@ -85,9 +85,20 @@
                 </div>
             </section>
         </div>
+        <div id="cart-menu" class="side-cart">
+            <div class="cart-header">
+                <h2>MI BOLSA</h2>
+                <button id="close-cart" class="close-btn">×</button>
+            </div>
+            <div class="cart-content">
+                <p style="font-size: 3.1rem; color: white; text-align: center;">PRONTO EN DESARROLLO</p>
+            </div>
+        </div>
+
+        <div id="overlay" class="overlay"></div>
     </main>
 
-  
+
     <footer>
         <div class="footer-links">
             <a href="#">¿NECESITAS AYUDA?</a>
@@ -107,14 +118,16 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>Todos los derechos reservados NAF NAF © 2022 | COMODIN S.A.S | NIT 800.069.933-6 | Calle 14 No. 52 A - 372 | Medellín - Colombia serviciocliente@nafnaf.com.co</p>
+            <p>Todos los derechos reservados NAF NAF © 2022 | COMODIN S.A.S | NIT 800.069.933-6 | Calle 14 No. 52 A -
+                372 | Medellín - Colombia serviciocliente@nafnaf.com.co</p>
         </div>
     </footer>
 
-    
-<script src="assets/js/productos.js" defer></script>
-<script src="assets/js/detalle.js" defer></script>
-<script src="assets/js/main.js" defer></script>
+
+    <script src="assets/js/productos.js" defer></script>
+    <script src="assets/js/detalle.js" defer></script>
+    <script src="assets/js/main.js" defer></script>
 
 </body>
+
 </html>
