Se encarpeta producto.html y se elimina genero de formulario

--- a/html/producto.html
+++ b/html/producto.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAF NAF Tienda de Ropa Online | Tendencias en Moda Femenina</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/Media-Querys.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/Media-Querys.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="icon" href="https://www.google.com/s2/favicons?domain=nafnaf.com.co&sz=64">
 </head>
@@ -79,9 +79,9 @@
             <section class="medios-pago">
                 <h2>Medios de pago</h2>
                 <div class="logos-pago">
-                    <img src="assets/media/images/logoVisa.png" alt="Visa">
-                    <img src="assets/media/images/logoMaster.png" alt="MasterCard">
-                    <img src="assets/media/images/logoAmex.png" alt="American Express">
+                    <img src="/assets/media/images/logoVisa.png" alt="Visa">
+                    <img src="/assets/media/images/logoMaster.png" alt="MasterCard">
+                    <img src="/assets/media/images/logoAmex.png" alt="American Express">
                 </div>
             </section>
         </div>
@@ -124,9 +124,9 @@
     </footer>
 
 
-    <script src="assets/js/productos.js" defer></script>
-    <script src="assets/js/detalle.js" defer></script>
-    <script src="assets/js/main.js" defer></script>
+    <script src="/assets/js/productos.js" defer></script>
+    <script src="/assets/js/detalle.js" defer></script>
+    <script src="/assets/js/main.js" defer></script>
 
 </body>
 
