--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="product-grid">
 
                 <!-- MODIFICANDO PARA PRUEBAS DC -->
-                <div class="product-card" onclick="window.location.href='producto.html?id=1'">
+                <div class="product-card" onclick="window.location.href='./html/producto.html?id=1'">
                     <img src="assets/media/images/producto1.webp" alt="Enterizo con escote en V">
                     <p>Camiseta manga corta</p>
                     <div class="price">
